--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ nav ul li a {
       <h1>Portafoli - Adria Novell Duaso</h1>
       <p>Me llamo Adria Novell Duaso, tengo 19 años y estudio un grado medio de informatica en el instituto la caparrella de Lleida. <br>
         Primero echo la leche y luego los cereales, como haria una persona en sus plenas facultades mentales.</p>
-      <img src="../foto/oscar novell (1).jpg" alt="foto">
+      <img src="foto/oscar novell (1).jpg" alt="foto">
     </div>
   </section>
   
