--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@ nav ul li a {
   margin-top: 20px;
   border-radius: 20px;
 }
+footer {
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+}
 
 
 
@@ -96,6 +101,10 @@ nav ul li a {
         Primero echo la leche y luego los cereales, como haria una persona en sus plenas facultades mentales.</p>
       <img src="foto/oscar novell (1).jpg" alt="foto">
     </div>
+    <footer>
+      <p>© Adria Novell Duaso Todos los derechos reservados. Sígueme en Instagram: <a href="https://www.instagram.com/el_duasoo/">@el_duasoo</a></p>
+    </footer>
+    
   </section>
   
 </body>
