--- a/actividades.html
+++ b/actividades.html
@@ -121,7 +121,7 @@ h3 {
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="actividades/curriculum.html">Curriculum</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
