--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ footer {
       <ul>
         <li><a href="actividades.html">Actividades</a></li>
         <li><a href="actividades/curriculum.html">Curriculum</a></li>
-        <li><a href="#contact">Contacto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
