--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ footer {
       <img src="foto/oscar novell (1).jpg" alt="foto">
     </div>
     <footer>
-      <p>© Adria Novell Duaso Todos los derechos reservados. Sígueme en Instagram: <a href="https://www.instagram.com/el_duasoo/">@el_duasoo</a></p>
+      <p>© Adria Novell Duaso. Todos los derechos reservados. Sígueme en Instagram: <a href="https://www.instagram.com/el_duasoo/">@el_duasoo</a></p>
     </footer>
     
   </section>
