--- a/contacto.html
+++ b/contacto.html
@@ -127,7 +127,7 @@ ul li:hover {
         <input type="email" id="email" name="email" required>
       </div>
       <div class="form-group">
-        <label for="mensaje">Comentario:</label>
+        <label for="mensaje">Comentarios:</label>
         <textarea id="mensaje" name="mensaje" required></textarea>
       </div>
       <button type="submit">Enviar</button>
