--- a/actividades/curriculum.html
+++ b/actividades/curriculum.html
@@ -60,9 +60,9 @@ ul li:hover {
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="actividades/curriculum.html">Curriculum</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../actividades.html">Actividades</a></li>
+                <li><a href="../contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
