--- a/contacto.html
+++ b/contacto.html
@@ -7,10 +7,11 @@
  <style>
     body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: lightsteelblue;
   margin: 0;
   padding: 0;
 }
+
 
 .container {
   max-width: 600px;
@@ -109,9 +110,9 @@ ul li:hover {
     <header>
         <nav>
           <ul>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="actividades.html">Actividades</a></li>
             <li><a href="actividades/curriculum.html">Curriculum</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
       </header>
