--- a/actividades/curriculum.html
+++ b/actividades/curriculum.html
@@ -26,12 +26,12 @@ nav ul li:last-child {
 }
 
 nav ul li a {
-    color: white;
+    color: lightsteelblue;
     text-decoration: none;
 }
 ul li {
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid lightsteelblue;
     transition: background-color 0.3s ease;
     position: relative;
 }
@@ -50,7 +50,7 @@ ul li::before {
 }
 
 ul li:hover {
-    background-color: #f9f9f9;
+    background-color: lightsteelblue;
 }
 
     </style>
